--- a/public/styles/site/_variables.scss
+++ b/public/styles/site/_variables.scss
@@ -17,6 +17,8 @@ $color-lightergrey: #edefed;
 $color-brown: #454545;
 $font-size-base: 14px;
 $color-white-opacity: rgba(255,255,255,0.90);
+$color-lightestgrey: #fafafb;
+$color-lightergrey-less: #ebeef0;
 //input
 
 $input-height-xs: 50px;
