--- a/templates/views/partials/search-tabwrapper.hbs
+++ b/templates/views/partials/search-tabwrapper.hbs
@@ -1,4 +1,4 @@
-<div class="search-tabwrapper">
+<div class="search-tabwrapper text-left">
   <input id="search-tab1" class="search-tab" type="radio" name="search-tabs" checked>
   <label for="search-tab1" class="search-tab-label">Reise</label>
 
